@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 03-10-2006 fixed: if you canceled the 'scan all / scan new' dialog in the music window, it would still scan.
  - 03-10-2006 fixed: ftp playback in mplayer where broken due to yet another url parsing mistake
  - 03-10-2006 changed: Scrollspeed of RSS feeds the same in all resolutions.
  - 03-10-2006 fixed: [ 1568300 ] Add/Edit Source Dialogue Remove all Paths bug.
